Third section drafting

--- a/index.html
+++ b/index.html
@@ -6,47 +6,49 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
         <div class="half-width">
-            <img src="images/db.png" alt="">
-        </div>
-        <div class="half-width" id="intro-block">
-            <h2>Ashiq Iqbal Rashed</h2>
-            <p><span class="title-top"> Senior Marketing Executive </span><br>
-            <span class="company-name">Al Mikhzaam</span><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, consectetur debitis voluptatem veritatis enim nobis perspiciatis officiis accusantium facilis? Voluptates recusandae officia possimus quae! Voluptas praesentium corporis quaerat pariatur velit iusto possimus incidunt sit reiciendis, deleniti magnam doloribus libero dolorem nihil, vero aut maxime accusantium odit! Soluta vel asperiores vitae ad rerum veritatis recusandae, beatae deleniti voluptatem laborum alias perferendis aut nisi consequuntur, illum voluptatibus ducimus ab temporibus. Libero.</p>
-            <a class="link-button" href="#about-me-section-nav">About Me</a>
-        </div>
-    </section>
-    <section id="about-me-section-nav">
-        <div class="half-width">
-            <h2>About Me</h2>
-            <p><span class="title-top"> Senior Marketing Executive </span><br>
-                <span class="company-name">Al Mikhzaam</span><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia, consectetur debitis voluptatem veritatis enim nobis perspiciatis officiis accusantium facilis? Voluptates recusandae officia possimus quae! Voluptas praesentium corporis quaerat pariatur velit iusto possimus incidunt sit reiciendis, deleniti magnam doloribus libero dolorem nihil, vero aut maxime accusantium odit! Soluta vel asperiores vitae ad rerum veritatis recusandae, beatae deleniti voluptatem laborum alias perferendis aut nisi consequuntur, illum voluptatibus ducimus ab temporibus. Libero.</p>
-            <a class="link-button" href="#about-me-section-nav">Download Resume</a>
-
+            <h1> <span class="highlighter-1">HELLO, I'M</span> <br> <span class="highlighter-2">ASHIQ IQBAL</span> </h1>
+            <p>A full stack allaround designer that placerat in massa consectetur</p>
+            <a class="link-button" href="#">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/db.png" alt="">
+            <img src="images/db.png" alt="Ashiq Iqbal's Photo">
         </div>
     </section>
     <section>
-        <div>
-        <h1>Latest Working Projects</h1>
+        <div class="half-width">
+            <img src="images/db.png" alt="Ashiq Iqbal's Photo">
         </div>
-        <div class="half-width-img">
-            <img src="images/image4.png" alt="image4">
+        <div class="half-width">
+            <h3>About</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda repellat ea ad eos veritatis eum ducimus doloremque architecto nam illo debitis, quibusdam quis iste magni ullam mollitia! Illum, architecto quibusdam?</p>
+            <a class="link-button" href="#">DOWNLOAD CV</a>
         </div>
-        <div class="half-width-img">
-            <img src="images/image5.png" alt="image5">
+    </section>
+    <section id="background-banner" class="working-projects">
+            <h2><span class="highlighter-2">LATEST</span> <span class="highlighter-1">WORKING PROJECTS</span></h2>
+        <div class="half-width-third-sec single-block">
+            <img src="images/image4.png" alt="Power-x-gym (gym website)">
+            <h4>Power-x-gym (gym website)</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, autem.</p>
         </div>
-        <div class="half-width-img">
-            <img src="images/image8.png" alt="image8">
+        <div class="half-width-third-sec single-block">
+            <img src="images/image5.png" alt="Creative Agency">
+            <h4>Creative Agency</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ut magnam?</p>
         </div>
+        <div class="half-width-third-sec single-block">
+            <img src="images/image8.png" alt="Hard Rock Music">
+            <h4>Hard Rock Music</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet doloribus omnis.</p>
+        </div>
+
     </section>
 </body>
 </html>
