--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <section>
         <div class="half-width">
-            <h1> <span class="highlighter-1">HELLO, I'M</span> <br> <span class="highlighter-2">ASHIQ IQBAL</span> </h1>
-            <p>A full stack allaround designer that placerat in massa consectetur</p>
+            <h1> <span class="highlighter-1">HELLO, I'M</span> <br> <span class="highlighter-2">  ASHIQ IQBAL</span> </h1>
+            <p>A full stack allaround designer that Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
             <a class="link-button" href="#">HIRE ME</a>
         </div>
         <div class="half-width">
@@ -31,24 +31,50 @@
             <a class="link-button" href="#">DOWNLOAD CV</a>
         </div>
     </section>
-    <section id="background-banner" class="working-projects">
+    <section id="background-banner">
             <h2><span class="highlighter-2">LATEST</span> <span class="highlighter-1">WORKING PROJECTS</span></h2>
-        <div class="half-width-third-sec single-block">
-            <img src="images/image4.png" alt="Power-x-gym (gym website)">
-            <h4>Power-x-gym (gym website)</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, autem.</p>
+        <div class="block-center">
+            <div class="half-width-third-sec single-block">
+                <img src="images/image4.png" alt="Power-x-gym (gym website)">
+                <h4>Power-x-gym (gym website)</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, autem.</p>
+            </div>
+            <div class="half-width-third-sec single-block">
+                <img src="images/image5.png" alt="Creative Agency">
+                <h4>Creative Agency</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ut magnam?</p>
+            </div>
+            <div class="half-width-third-sec single-block">
+                <img src="images/image8.png" alt="Hard Rock Music">
+                <h4>Hard Rock Music</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet doloribus omnis.</p>
+            </div>
         </div>
-        <div class="half-width-third-sec single-block">
-            <img src="images/image5.png" alt="Creative Agency">
-            <h4>Creative Agency</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ut magnam?</p>
-        </div>
-        <div class="half-width-third-sec single-block">
-            <img src="images/image8.png" alt="Hard Rock Music">
-            <h4>Hard Rock Music</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet doloribus omnis.</p>
-        </div>
-
     </section>
+    <section>
+
+        <div class="half-width-bottom">
+            <img src="images/Group_33094_1.png" alt="">
+            <h2><span class="work">WORK INQUIRY</span>
+            <a class="link-button lets-chat-button" href="#">Let's Chat</a></h2>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <h2><span class="stay-connected">STAY CONNECTED</span></h2>
+            <h2><span class="mail">minhajsiam007@gmail.com</span></h2>
+        </div>
+    <div class="icon-center">
+        <div class="icon-half-width">
+            <img src="icons/image 6.png" alt="">
+        </div>
+        <div class="icon-half-width">
+            <img src="icons/Group 33059.png" alt="">
+        </div>
+        <div class="icon-half-width">
+            <img src="icons/image 7.png" alt="">
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
