--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--First Section-->
     <section>
         <div class="half-width">
             <h1> <span class="highlighter-1">HELLO, I'M</span> <br> <span class="highlighter-2">  ASHIQ IQBAL</span> </h1>
@@ -21,6 +22,7 @@
             <img src="images/db.png" alt="Ashiq Iqbal's Photo">
         </div>
     </section>
+    <!--Second Section-->
     <section>
         <div class="half-width">
             <img src="images/db.png" alt="Ashiq Iqbal's Photo">
@@ -31,6 +33,7 @@
             <a class="link-button" href="#">DOWNLOAD CV</a>
         </div>
     </section>
+    <!--Third Section-->
     <section id="background-banner">
             <h2><span class="highlighter-2">LATEST</span> <span class="highlighter-1">WORKING PROJECTS</span></h2>
         <div class="block-center">
@@ -49,16 +52,29 @@
                 <h4>Hard Rock Music</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis amet doloribus omnis.</p>
             </div>
+    <!--Form-->
+        <div class="form">
+            <form>
+                <label for="">Your Name:</label>
+                <input type="text">
+                <label for="">Your Email:</label>
+                <input type="text"><br>
+                <textarea rows="5" cols="59">Type your queries here...</textarea>
+                <a class="form-link-button" href="#">Submit</a>
+            </form>
+        </div>
+    <!--Form-->
         </div>
     </section>
+    <!--Fourth Section-->
     <section>
-
         <div class="half-width-bottom">
             <img src="images/Group_33094_1.png" alt="">
             <h2><span class="work">WORK INQUIRY</span>
             <a class="link-button lets-chat-button" href="#">Let's Chat</a></h2>
         </div>
     </section>
+    <!--Footer-->
     <footer>
         <div>
             <h2><span class="stay-connected">STAY CONNECTED</span></h2>
